package com.example;

/**
 * 本类由: Risky 创建于: 15/12/15.
 */
public interface Command {
    void execute();
    void undo();
}
